--- a/test.bat.example
+++ b/test.bat.example
@@ -1,5 +1,5 @@
 cls
 @echo off
 chcp 65001
-py start.py {PATH_ORIGIN} {PATH_DESTINATION}
+py start.py {COMMAND} {PATH_ORIGIN} {PATH_DESTINATION}
 exit
